--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
-# Entornos virtuales
+# Entorno virtual
 venv/
 .env
 
-# Archivos de base de datos
+# Base de datos
 db.sqlite3
 
-# Archivos de migraciones
+# Archivos media (subidas de usuario)
+media/
+
+# Migraciones y __pycache__
 **/migrations/*.pyc
 **/migrations/__pycache__/
 **/migrations/*.py
 
-# Archivos de caché de Python
+# Caché y archivos Python compilados
 __pycache__/
 *.py[cod]
 *$py.class
@@ -19,15 +22,10 @@ __pycache__/
 .DS_Store
 Thumbs.db
 
-# Archivos de logs
+# Logs
 *.log
 
-# Archivos de compilación
-*.so
-*.o
-*.pyc
-
-# Archivos de configuración de editor
+# Configs de IDE/editor
 .vscode/
 .idea/
 
